2010-04-25  Bruno Haible  <bruno@clisp.org>

	[BZ #11537]
	* sysdeps/mach/hurd/ttyname_r.c (__ttyname_r): Upon failure, return
	errno, not -1.

2010-04-24  Emilio Pozuelo Monfort  <pochu27@gmail.com>

	* hurd/lookup-at.c (__file_name_lookup_at): Fix error return value.

2010-04-22  Ulrich Drepper  <drepper@redhat.com>

	* po/vi.po: Update from translation team.

2010-04-21  Ulrich Drepper  <drepper@redhat.com>

	* po/bg.po: Update from translation team.

2010-04-19  Roland McGrath  <roland@redhat.com>

	* elf/Makefile ($(objpfx)noload): Depend on libdl.so.

	* Makeconfig (as-needed, no-as-needed): New variables.
	(link-libc): Add ld.so inside --as-needed.

	* stdio-common/tst-fmemopen.c (TEST_FILE): Macro removed.
	(main): Take arguments.  Construct test file name from ARGV[0].

2010-04-15  H.J. Lu  <hongjiu.lu@intel.com>

	* string/test-strncmp.c (check_result): New function.
	(do_one_test): Use it.
	(check1): New function.
	(test_main): Use it.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S (crosspage): Properly
	update source and destination.
	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S (gobble_ashr_12):
	Properly check and update counter.

2010-04-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/elf/configure.in: Move AVX test to ....
	* sysdeps/i386/configure.in: ...here.
	* sysdeps/i386/i686/multiarch/Makefile (libm-sysdep_routines): Define.
	(CFLAGS-s_fma-fma.c): Define.
	(CFLAGS-s_fmaf-fma.c): Define.
	* sysdeps/i386/i686/multiarch/Versions: New file.
	* sysdeps/i386/i686/multiarch/s_fma-fma.c: New file.
	* sysdeps/i386/i686/multiarch/s_fma.c: New file.
	* sysdeps/i386/i686/multiarch/s_fmaf-fma.c: New file.
	* sysdeps/i386/i686/multiarch/s_fmaf.c: New file.

	* sysdeps/x86_64/multiarch/memcmp-sse4.S: Check
	DATA_CACHE_SIZE_HALF instead of SHARED_CACHE_SIZE_HALF.

2010-04-14  Andreas Schwab  <schwab@redhat.com>

	* elf/dl-version.c (_dl_check_map_versions): Avoid index overflow
	when dependencies are missing.

2010-04-14  H.J. Lu  <hongjiu.lu@intel.com>